@@ -1,5 +1,7 @@
 Changes in 1.8 (??.??.2011)
 
+ - Renamed IOSOperator::getOperationSystemVersion to getOperatingSystemVersion. Changed return type from wchar_t to core::stringc, as that's the internal representation the name is built on.
+
  - Added IGUITabControl::insertTab, IGUITabControl::removeTab, IGUITabControl::clear and IGUITabControl::getTabAt
 
  - Added IGUIListBox::getItemAt
